<?xml version="1.0"?>
<package format="3">
  <name>s3_file_uploader</name>
  <version>1.0.1</version>
  <description>Package with a node that facilitates the uploading of files to Amazon S3</description>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>aws_common</depend>
  <depend>aws_ros1_common</depend>
  <depend>boost</depend>
  <depend>file_uploader_msgs</depend>
  <depend>roscpp</depend>
  <depend>s3_common</depend>

  <test_depend>gtest</test_depend>
  <test_depend>google-mock</test_depend>
  <test_depend>rostest</test_depend>
</package>
